--- a/ValorantApp/Screen/Main/CustomCell/CustomCell.xib
+++ b/ValorantApp/Screen/Main/CustomCell/CustomCell.xib
@@ -11,43 +11,94 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomCell" customModule="ValorantApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="328" height="134"/>
+            <rect key="frame" x="0.0" y="0.0" width="328" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="jPa-va-68y">
-                    <rect key="frame" x="10" y="5" width="308" height="124"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hZf-G2-ahv">
+                    <rect key="frame" x="0.0" y="0.0" width="328" height="150"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vKX-pa-NMn">
-                            <rect key="frame" x="0.0" y="0.0" width="139" height="124"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Character" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pv2-de-enQ">
-                            <rect key="frame" x="169" y="0.0" width="139" height="124"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gzM-HY-PYn">
+                            <rect key="frame" x="5" y="5" width="318" height="143"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="mCT-Em-Xdk">
+                                    <rect key="frame" x="0.0" y="0.0" width="318" height="143"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FeE-nv-TRa">
+                                            <rect key="frame" x="0.0" y="0.0" width="159" height="143"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XpP-wS-bfJ">
+                                                    <rect key="frame" x="15" y="15.5" width="129" height="112"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="XpP-wS-bfJ" secondAttribute="trailing" constant="15" id="Dqi-hs-DO5"/>
+                                                <constraint firstAttribute="bottom" secondItem="XpP-wS-bfJ" secondAttribute="bottom" constant="15" id="YLq-VR-kuH"/>
+                                                <constraint firstItem="XpP-wS-bfJ" firstAttribute="top" secondItem="FeE-nv-TRa" secondAttribute="top" constant="15" id="aij-me-rqJ"/>
+                                                <constraint firstItem="XpP-wS-bfJ" firstAttribute="leading" secondItem="FeE-nv-TRa" secondAttribute="leading" constant="15" id="g43-LO-mIf"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BiH-an-C8k">
+                                            <rect key="frame" x="159" y="0.0" width="159" height="143"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GB0-N2-TrI" customClass="statusNameLabel">
+                                                    <rect key="frame" x="0.0" y="0.0" width="159" height="143"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="GB0-N2-TrI" secondAttribute="trailing" id="Sh5-q8-dvo"/>
+                                                <constraint firstItem="GB0-N2-TrI" firstAttribute="leading" secondItem="BiH-an-C8k" secondAttribute="leading" id="Wo1-ZL-Nyt"/>
+                                                <constraint firstAttribute="bottom" secondItem="GB0-N2-TrI" secondAttribute="bottom" id="YpL-gk-JxP"/>
+                                                <constraint firstItem="GB0-N2-TrI" firstAttribute="top" secondItem="BiH-an-C8k" secondAttribute="top" id="hBq-WS-lrU"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemRedColor"/>
+                            <constraints>
+                                <constraint firstItem="mCT-Em-Xdk" firstAttribute="leading" secondItem="gzM-HY-PYn" secondAttribute="leading" id="1Ip-dr-WmF"/>
+                                <constraint firstAttribute="bottom" secondItem="mCT-Em-Xdk" secondAttribute="bottom" id="E4n-mi-Xwn"/>
+                                <constraint firstAttribute="trailing" secondItem="mCT-Em-Xdk" secondAttribute="trailing" id="Wuv-0n-xSc"/>
+                                <constraint firstItem="mCT-Em-Xdk" firstAttribute="top" secondItem="gzM-HY-PYn" secondAttribute="top" id="hAl-7y-ZGm"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemRedColor"/>
-                </stackView>
+                    <color key="backgroundColor" systemColor="labelColor"/>
+                    <constraints>
+                        <constraint firstItem="gzM-HY-PYn" firstAttribute="leading" secondItem="hZf-G2-ahv" secondAttribute="leading" constant="5" id="3r6-eS-FzD"/>
+                        <constraint firstItem="gzM-HY-PYn" firstAttribute="centerX" secondItem="hZf-G2-ahv" secondAttribute="centerX" id="GI0-5I-j2Y"/>
+                        <constraint firstItem="gzM-HY-PYn" firstAttribute="top" secondItem="hZf-G2-ahv" secondAttribute="top" constant="5" id="X3e-Jy-zHI"/>
+                        <constraint firstAttribute="bottom" secondItem="gzM-HY-PYn" secondAttribute="bottom" constant="2" id="p6G-k2-FhF"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="jPa-va-68y" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="AyN-GA-VIh"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="jPa-va-68y" secondAttribute="bottom" constant="5" id="TEM-ZH-aNS"/>
-                <constraint firstItem="jPa-va-68y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="asO-7a-Ekh"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jPa-va-68y" secondAttribute="trailing" constant="10" id="pdz-lg-zB7"/>
+                <constraint firstItem="hZf-G2-ahv" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="BZE-2V-lam"/>
+                <constraint firstItem="hZf-G2-ahv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SDu-Ul-ht1"/>
+                <constraint firstItem="hZf-G2-ahv" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="eWk-hj-PkK"/>
+                <constraint firstItem="hZf-G2-ahv" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="smQ-3N-tDb"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="statusNameLabel" destination="pv2-de-enQ" id="4gH-ka-K4d"/>
+                <outlet property="statusImageView" destination="XpP-wS-bfJ" id="U1h-YR-4N1"/>
+                <outlet property="statusNameLabel" destination="GB0-N2-TrI" id="yYd-ge-zp3"/>
+                <outlet property="topView" destination="gzM-HY-PYn" id="aLv-Hq-deA"/>
             </connections>
             <point key="canvasLocation" x="27.536231884057973" y="348.21428571428572"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="pencil.circle" catalog="system" width="128" height="121"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
