--- a/ValorantApp/Screen/Main/CustomCell/CustomCell.xib
+++ b/ValorantApp/Screen/Main/CustomCell/CustomCell.xib
@@ -26,8 +26,11 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FeE-nv-TRa">
                                             <rect key="frame" x="0.0" y="0.0" width="159" height="143"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XpP-wS-bfJ">
-                                                    <rect key="frame" x="15" y="15.5" width="129" height="112"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character" translatesAutoresizingMaskIntoConstraints="NO" id="XpP-wS-bfJ">
+                                                    <rect key="frame" x="15" y="15" width="129" height="113"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="113" id="cCD-Vr-qaR"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -44,7 +47,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GB0-N2-TrI" customClass="statusNameLabel">
                                                     <rect key="frame" x="0.0" y="0.0" width="159" height="143"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -96,7 +99,7 @@
         </view>
     </objects>
     <resources>
-        <image name="pencil.circle" catalog="system" width="128" height="121"/>
+        <image name="character" width="512" height="512"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
