--- a/ValorantApp/Screen/Main/CustomCell/CustomCell.xib
+++ b/ValorantApp/Screen/Main/CustomCell/CustomCell.xib
@@ -64,7 +64,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemRedColor"/>
+                            <color key="backgroundColor" red="0.8392156959" green="0.27450981740000002" blue="0.29803922770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <constraints>
                                 <constraint firstItem="mCT-Em-Xdk" firstAttribute="leading" secondItem="gzM-HY-PYn" secondAttribute="leading" id="1Ip-dr-WmF"/>
                                 <constraint firstAttribute="bottom" secondItem="mCT-Em-Xdk" secondAttribute="bottom" id="E4n-mi-Xwn"/>
@@ -102,9 +102,6 @@
         <image name="character" width="512" height="512"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
