--- a/ValorantApp/Screen/CharacterVC/CharacteCollectionView/CharacterCollectionViewCell.xib
+++ b/ValorantApp/Screen/CharacterVC/CharacteCollectionView/CharacterCollectionViewCell.xib
@@ -4,46 +4,58 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="characterCell" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModule="ValorantApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="128" height="172"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="250"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="128" height="172"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="250"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ScZ-ys-eqn">
-                        <rect key="frame" x="0.0" y="0.0" width="128" height="172"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="250"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gY2-82-osy">
-                                <rect key="frame" x="15" y="12.5" width="98" height="127"/>
-                                <color key="backgroundColor" systemColor="systemBlueColor"/>
-                                <color key="tintColor" systemColor="secondarySystemGroupedBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="uOf-Ox-hZb"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unicorn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9YE-qL-m6B">
-                                <rect key="frame" x="34" y="143" width="60" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="EW1-ac-p01">
+                                <rect key="frame" x="3" y="0.0" width="194" height="250"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="de9c52a-19ec990d-41b6-4279-a12e-b2dd9927c3a1" translatesAutoresizingMaskIntoConstraints="NO" id="vwY-qw-bGE">
+                                        <rect key="frame" x="0.0" y="0.0" width="194" height="200"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uqa-QC-Cl7">
+                                        <rect key="frame" x="0.0" y="200" width="194" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SgG-NC-lWk">
+                                                <rect key="frame" x="0.0" y="0.0" width="194" height="50"/>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.43971527069999999" green="0.1385616881" blue="0.044451855249999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="2fR-0Q-2SA"/>
+                                            <constraint firstAttribute="bottom" secondItem="SgG-NC-lWk" secondAttribute="bottom" id="By5-mI-0ba"/>
+                                            <constraint firstItem="SgG-NC-lWk" firstAttribute="leading" secondItem="uqa-QC-Cl7" secondAttribute="leading" id="jnc-c1-QQg"/>
+                                            <constraint firstItem="SgG-NC-lWk" firstAttribute="top" secondItem="uqa-QC-Cl7" secondAttribute="top" id="l2l-Mr-JeS"/>
+                                            <constraint firstAttribute="trailing" secondItem="SgG-NC-lWk" secondAttribute="trailing" id="sXY-xI-ogU"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.43971527072993216" green="0.13856168814829931" blue="0.044451855251020411" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.8392156959" green="0.27450981740000002" blue="0.29803922770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="gY2-82-osy" firstAttribute="top" secondItem="ScZ-ys-eqn" secondAttribute="top" constant="12" id="6o6-JD-osf"/>
-                            <constraint firstAttribute="trailing" secondItem="9YE-qL-m6B" secondAttribute="trailing" constant="34" id="UwT-45-Etk"/>
-                            <constraint firstItem="9YE-qL-m6B" firstAttribute="leading" secondItem="ScZ-ys-eqn" secondAttribute="leading" constant="34" id="WiV-tH-gF8"/>
-                            <constraint firstItem="gY2-82-osy" firstAttribute="leading" secondItem="ScZ-ys-eqn" secondAttribute="leading" constant="15" id="fbs-kc-l4l"/>
-                            <constraint firstAttribute="bottom" secondItem="9YE-qL-m6B" secondAttribute="bottom" constant="8" id="hhX-9W-Mr7"/>
-                            <constraint firstItem="9YE-qL-m6B" firstAttribute="centerX" secondItem="ScZ-ys-eqn" secondAttribute="centerX" id="xCW-WJ-XOr"/>
-                            <constraint firstAttribute="trailing" secondItem="gY2-82-osy" secondAttribute="trailing" constant="15" id="zSX-xU-xMD"/>
+                            <constraint firstAttribute="bottom" secondItem="EW1-ac-p01" secondAttribute="bottom" id="2xh-RR-kSy"/>
+                            <constraint firstAttribute="trailing" secondItem="EW1-ac-p01" secondAttribute="trailing" constant="3" id="3gq-a3-PgZ"/>
+                            <constraint firstItem="EW1-ac-p01" firstAttribute="top" secondItem="ScZ-ys-eqn" secondAttribute="top" id="Vzz-xL-HQA"/>
+                            <constraint firstItem="EW1-ac-p01" firstAttribute="leading" secondItem="ScZ-ys-eqn" secondAttribute="leading" constant="3" id="xIs-Sn-DFf"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -55,24 +67,16 @@
                 <constraint firstAttribute="bottom" secondItem="ScZ-ys-eqn" secondAttribute="bottom" id="c2Q-4K-7BT"/>
                 <constraint firstItem="ScZ-ys-eqn" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="u9x-fF-Mdc"/>
             </constraints>
-            <size key="customSize" width="128" height="172"/>
+            <size key="customSize" width="197" height="172"/>
             <connections>
-                <outlet property="characterImageView" destination="gY2-82-osy" id="HzS-1C-RMx"/>
-                <outlet property="characterNameLabel" destination="9YE-qL-m6B" id="9Fz-wE-RHs"/>
+                <outlet property="characterImageView" destination="vwY-qw-bGE" id="Exz-5t-FpG"/>
+                <outlet property="characterNameLabel" destination="SgG-NC-lWk" id="ca1-LH-auT"/>
+                <outlet property="stackView" destination="EW1-ac-p01" id="20K-Rk-vj6"/>
             </connections>
-            <point key="canvasLocation" x="194.20289855072465" y="132.58928571428572"/>
+            <point key="canvasLocation" x="244.20289855072465" y="132.58928571428572"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="square.and.arrow.up.circle.fill" catalog="system" width="128" height="121"/>
-        <systemColor name="secondarySystemGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="de9c52a-19ec990d-41b6-4279-a12e-b2dd9927c3a1" width="512" height="512"/>
     </resources>
 </document>
